--- a/reference.Rmd
+++ b/reference.Rmd
@@ -7,3 +7,7 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 Various information links will be posted here as needed.
+
+# Timer
+
+[15 minute timer](static/timer/index.html)
