--- a/assignments-01.Rmd
+++ b/assignments-01.Rmd
@@ -50,7 +50,7 @@ data("biomass")
 ```
 
 a. Fit a multiple regression model to predict `HHV` using `carbon`, `hydrogen` and `oxygen`.
-a. Provide an interpretation of each coefficient in the model. Be careful, note the values `Cruise` is able to take.
+a. Provide an interpretation of each coefficient in the model.
 a. Write out the model in equation form.
 a. For which the predictors can you reject the null hypothesis $H_0: \beta_j = 0$?
 a. On the basis of your response to the previous question, fit a smaller model that only uses the predictors for which there is evidence of association with the outcome.
