--- a/readings-week4-wednesday.Rmd
+++ b/readings-week4-wednesday.Rmd
@@ -11,3 +11,11 @@ Please finish reading chapter 6 of "An Introduction to Statistical Learning". Th
 This will be a good time to finally talk about hyper parameter tuning. We will use the [tune](https://tune.tidymodels.org/) package and [dials](https://dials/tidymodels.org/) package. A great place to start learning about these packages is [this post](https://tune.tidymodels.org/articles/getting_started.html).
 
 The tidymodels labs chapter can be found [here](https://emilhvitfeldt.github.io/ISLR-tidymodels-labs/linear-model-selection-and-regularization.html).
+
+## Slides
+
+```{r embed-xaringan, echo=FALSE, eval=TRUE}
+xaringanExtra::embed_xaringan(url = "static/slides/week4-wednesday/index.html", ratio = "16:9")
+```
+
+[PDF download](static/slides/week4-wednesday/week4-wednesday.pdf) [Full Screen](static/slides/week4-wednesday/index.html)
